# sacdp

./: README.md
.github/workflows/: ci.yml
task-1/: CMakeLists.txt
task-1/include/: bigint.h
task-1/src/: .bigint.c.swp  bigint.c
task-1/tests/: .bigint.c.swp  bigint.c
task-2/: CMakeLists.txt  README.md
task-2/include/: field.h
task-2/src/: field.c
task-2/tests/: field.c
task-3/: Makefile  README.md  aes_main-fix-class_create.patch  aes_main.c  field.c  field.h
task-4/: CMakeLists.txt  README.md  compare.py  download.sh
task-4/src/: dpll.c
task-5/: first-measurements.ipynb  second-measurements.ipynb
